Refactor: Rebrand site to Elzemm Tesisat

--- a/about.html
+++ b/about.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hakkımızda | Uzman Tecrübe ile Ankara'nın Güvenilir Tesisatçısı | Ankara Tesisat</title>
+    <title>Hakkımızda | Uzman Tecrübe ile Elzemm'in Güvenilir Tesisatçısı | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
-    <meta name="keywords" content="ankara tesisat hakkında, ankara güvenilir tesisatçı, uzman tecrübe, garantili tesisat hizmeti, uzman tesisat ekibi, müşteri memnuniyeti, ankara su tesisatçısı">
-    <meta name="description" content="Ankara Tesisat olarak uzman tecrübemiz, profesyonel ekibimiz ve teknolojik ekipmanlarımızla Ankara'da garantili su tesisatı çözümleri sunuyoruz. Misyonumuz %100 müşteri memnuniyetidir.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="keywords" content="elzemm tesisat hakkında, ankara güvenilir tesisatçı, uzman tecrübe, garantili tesisat hizmeti, uzman tesisat ekibi, müşteri memnuniyeti, ankara su tesisatçısı">
+    <meta name="description" content="Elzemm Tesisat olarak uzman tecrübemiz, profesyonel ekibimiz ve teknolojik ekipmanlarımızla Elzemm'de garantili su tesisatı çözümleri sunuyoruz. Misyonumuz %100 müşteri memnuniyetidir.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Hakkımızda | Uzman Tecrübe ile Ankara'nın Güvenilir Tesisatçısı | Ankara Tesisat">
-    <meta property="og:description" content="Ankara Tesisat olarak uzman tecrübemiz ve profesyonel ekibimizle Ankara'da garantili su tesisatı çözümleri sunuyoruz.">
+    <meta property="og:title" content="Hakkımızda | Uzman Tecrübe ile Elzemm'in Güvenilir Tesisatçısı | Elzemm Tesisat">
+    <meta property="og:description" content="Elzemm Tesisat olarak uzman tecrübemiz ve profesyonel ekibimizle Elzemm'de garantili su tesisatı çözümleri sunuyoruz.">
     <meta property="og:image" content="img/about-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com/about.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Hakkımızda | Uzman Tecrübe ile Ankara'nın Güvenilir Tesisatçısı | Ankara Tesisat">
-    <meta name="twitter:description" content="Ankara Tesisat olarak uzman tecrübemiz ve profesyonel ekibimizle Ankara'da garantili su tesisatı çözümleri sunuyoruz.">
+    <meta name="twitter:title" content="Hakkımızda | Uzman Tecrübe ile Elzemm'in Güvenilir Tesisatçısı | Elzemm Tesisat">
+    <meta name="twitter:description" content="Elzemm Tesisat olarak uzman tecrübemiz ve profesyonel ekibimizle Elzemm'de garantili su tesisatı çözümleri sunuyoruz.">
     <meta name="twitter:image" content="img/about-1.jpg">
 
     <!-- Favicon -->
@@ -61,7 +61,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -78,7 +78,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -136,17 +136,17 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">Bizi Tanıyın</h6>
-                    <h1 class="mb-4">Uzman Tecrübe ile Ankara'nın Güvenilir Tesisat Çözüm Ortağı</h1>
-                    <p class="mb-4">Ankara Tesisat, uzun yıllar önce Ankara'da, su tesisatı sektörüne kalıcı ve güvenilir çözümler sunma misyonuyla kuruldu. Geçen yıllar boyunca, teknolojiyi yakından takip ederek ve kendimizi sürekli geliştirerek, Ankara'nın en saygın ve güvenilir tesisat firmalarından biri haline geldik. Temel prensibimiz, dürüstlük ve kaliteli işçiliği bir araya getirerek %100 müşteri memnuniyeti sağlamaktır.</p>
+                    <h1 class="mb-4">Uzman Tecrübe ile Elzemm'in Güvenilir Tesisat Çözüm Ortağı</h1>
+                    <p class="mb-4">Elzemm Tesisat, uzun yıllar önce Elzemm'de, su tesisatı sektörüne kalıcı ve güvenilir çözümler sunma misyonuyla kuruldu. Geçen yıllar boyunca, teknolojiyi yakından takip ederek ve kendimizi sürekli geliştirerek, Elzemm'in en saygın ve güvenilir tesisat firmalarından biri haline geldik. Temel prensibimiz, dürüstlük ve kaliteli işçiliği bir araya getirerek %100 müşteri memnuniyeti sağlamaktır.</p>
                     <p class="mb-4">Su kaçağı tespiti, tıkanıklık açma, komple tesisat yenileme ve her türlü sıhhi tesisat arızasında, son teknoloji cihazlarımız ve alanında uzman ekibimizle hizmetinizdeyiz. Bizim için her iş, kendi evimizin işi kadar önemlidir. Bu nedenle, sorununuzu en hızlı, en temiz ve en ekonomik şekilde çözmek için çalışıyoruz.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Tüm İşlemlerimize Servis Garantisi</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Bütçe Dostu, Şeffaf Fiyat Politikası</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>7/24 Ankara'nın Her Yerine Acil Servis</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>7/24 Elzemm'in Her Yerine Acil Servis</p>
                 </div>
                 <div class="col-lg-6 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about-1.jpg"
-                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Tesisat uzman ekip çalışırken">
+                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Elzemm Tesisat uzman ekip çalışırken">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
                             src="img/about-2.jpg" style="object-fit: cover;" alt="Garantili tesisat hizmeti">
                     </div>
