--- a/ankara-armatur-montaji-ve-demontaji.html
+++ b/ankara-armatur-montaji-ve-demontaji.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ankara Armatür Montajı ve Demontajı | Ankara Tesisat</title>
+    <title>Ankara Armatür Montajı ve Demontajı | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara armatür montajı, armatür montajı ankara, ankara batarya montajı, musluk montajı ankara, ankara su tesisatçısı">
-    <meta name="description" content="Ankara'da her marka ve model armatür, batarya ve musluk montajı, demontajı ve değişimi. Ankara Tesisat garantili işçilikle hizmetinizde.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm'de her marka ve model armatür, batarya ve musluk montajı, demontajı ve değişimi. Elzemm Tesisat garantili işçilikle hizmetinizde.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -48,7 +48,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -65,7 +65,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -119,9 +119,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Ankara Tesisat</h6>
+                    <h6 class="text-secondary text-uppercase">Elzemm Tesisat</h6>
                     <h1 class="mb-4">Ankara Armatür, Batarya ve Musluk Montajı</h1>
-                    <p class="mb-4">Ankara Tesisat olarak, <strong>armatür montajı ve demontajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Banyo ve mutfaklarınızdaki her türlü batarya, musluk ve armatürün montajını, sökümünü veya değişimini titizlikle yapıyoruz.</p>
+                    <p class="mb-4">Elzemm Tesisat olarak, <strong>armatür montajı ve demontajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Banyo ve mutfaklarınızdaki her türlü batarya, musluk ve armatürün montajını, sökümünü veya değişimini titizlikle yapıyoruz.</p>
                     <p class="mb-4">Yeni aldığınız bir armatürün montajı veya eski, arızalı bataryanızın sökülüp yenisiyle değiştirilmesi işlemlerinde profesyonel hizmet sunuyoruz. Hatalı montaj sonucu oluşabilecek su sızıntıları ve arızaların önüne geçmek için işi uzmanına bırakın.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Tüm Marka ve Modellere Uygun Montaj</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Garantili ve Sızdırmaz İşçilik</p>
@@ -132,7 +132,7 @@
                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-1.jpg"
                             style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Armatür Montajı hizmeti">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara Tesisat garantili hizmet">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm Tesisat garantili hizmet">
                     </div>
                 </div>
             </div>
