--- a/ankara-makine-montaji.html
+++ b/ankara-makine-montaji.html
@@ -2,12 +2,12 @@
 <html lang="tr">
 <head>
     <meta charset="utf-8">
-    <title>Ankara Makine Montajı | Çamaşır ve Bulaşık Makinesi Bağlantısı | Ankara Tesisat</title>
+    <title>Ankara Makine Montajı | Çamaşır ve Bulaşık Makinesi Bağlantısı | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara makine montajı, çamaşır makinesi montajı ankara, bulaşık makinesi montajı ankara, makine su bağlantısı, ankara su tesisatçısı">
-    <meta name="description" content="Ankara'da çamaşır ve bulaşık makinesi montajı, su ve gider bağlantılarının yapılması. Ankara Tesisat, makinelerinizi güvenle kurar.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm'de çamaşır ve bulaşık makinesi montajı, su ve gider bağlantılarının yapılması. Elzemm Tesisat, makinelerinizi güvenle kurar.">
+    <meta name="author" content="Elzemm Tesisat">
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -44,7 +44,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -92,9 +92,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Ankara Tesisat</h6>
+                    <h6 class="text-secondary text-uppercase">Elzemm Tesisat</h6>
                     <h1 class="mb-4">Ankara Çamaşır ve Bulaşık Makinesi Montajı</h1>
-                    <p class="mb-4">Ankara Tesisat olarak, <strong>çamaşır ve bulaşık makinesi montajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Yeni aldığınız makinelerin su ve gider bağlantılarının doğru ve güvenli bir şekilde yapılması, sorunsuz bir kullanımın ilk adımıdır.</p>
+                    <p class="mb-4">Elzemm Tesisat olarak, <strong>çamaşır ve bulaşık makinesi montajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Yeni aldığınız makinelerin su ve gider bağlantılarının doğru ve güvenli bir şekilde yapılması, sorunsuz bir kullanımın ilk adımıdır.</p>
                     <p class="mb-4">Makinelerinizin temiz su hortumlarının bağlanması, pis su giderlerinin tesisata entegre edilmesi ve gerekli testlerin yapılarak sızdırmazlığın kontrol edilmesi hizmetlerimizin bir parçasıdır. Hatalı bağlantılar su baskınlarına ve ciddi hasarlara yol açabilir.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Çamaşır Makinesi Su ve Gider Bağlantısı</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Bulaşık Makinesi Su ve Gider Bağlantısı</p>
@@ -105,7 +105,7 @@
                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-1.jpg"
                             style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Makine Montajı hizmeti">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara Tesisat garantili hizmet">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm Tesisat garantili hizmet">
                     </div>
                 </div>
             </div>
