--- a/ankara-rezervuar-tamiri-ve-montaji.html
+++ b/ankara-rezervuar-tamiri-ve-montaji.html
@@ -2,12 +2,12 @@
 <html lang="tr">
 <head>
     <meta charset="utf-8">
-    <title>Ankara Rezervuar Tamiri ve Montajı | Gömme Rezervuar Tamiri | Ankara Tesisat</title>
+    <title>Ankara Rezervuar Tamiri ve Montajı | Gömme Rezervuar Tamiri | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara rezervuar tamiri, gömme rezervuar tamiri ankara, rezervuar iç takım değişimi ankara, rezervuar montajı, ankara su tesisatçısı">
-    <meta name="description" content="Ankara'da her marka ve model klozet rezervuarı ve gömme rezervuar tamiri, iç takım değişimi ve montajı. Ankara Tesisat garantili hizmet.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm'de her marka ve model klozet rezervuarı ve gömme rezervuar tamiri, iç takım değişimi ve montajı. Elzemm Tesisat garantili hizmet.">
+    <meta name="author" content="Elzemm Tesisat">
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -44,7 +44,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -92,9 +92,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Ankara Tesisat</h6>
+                    <h6 class="text-secondary text-uppercase">Elzemm Tesisat</h6>
                     <h1 class="mb-4">Ankara Gömme ve Standart Rezervuar Tamiri</h1>
-                    <p class="mb-4">Ankara Tesisat olarak, <strong>rezervuar tamiri ve montajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Özellikle gömme rezervuarların tamiri, uzmanlık gerektiren hassas bir iştir. Duvarların kırılmasına gerek kalmadan, özel ekipmanlarımızla tamir ve parça değişimi yapıyoruz.</p>
+                    <p class="mb-4">Elzemm Tesisat olarak, <strong>rezervuar tamiri ve montajı</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Özellikle gömme rezervuarların tamiri, uzmanlık gerektiren hassas bir iştir. Duvarların kırılmasına gerek kalmadan, özel ekipmanlarımızla tamir ve parça değişimi yapıyoruz.</p>
                     <p class="mb-4">Rezervuarınız su sızdırıyorsa, şamandırası bozulduysa veya iç takımı arızalandıysa, bize ulaşarak garantili onarım hizmeti alabilirsiniz. Tüm marka ve model rezervuarlar için yedek parça temini ve montajı sağlıyoruz.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Gömme Rezervuar Tamiri</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Rezervuar İç Takım Değişimi</p>
@@ -105,7 +105,7 @@
                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-2.jpg"
                             style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Rezervuar Tamiri hizmeti">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara Tesisat garantili hizmet">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm Tesisat garantili hizmet">
                     </div>
                 </div>
             </div>
