--- a/blog.html
+++ b/blog.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Blog | Tesisat İpuçları ve Haberler | Ankara Tesisat</title>
+    <title>Blog | Tesisat İpuçları ve Haberler | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
-    <meta name="keywords" content="ankara tesisat blog, su tesisatı ipuçları, su kaçağı nasıl anlaşılır, tıkanıklık açma yöntemleri, tesisat haberleri">
-    <meta name="description" content="Ankara Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri, sektördeki yenilikler ve daha fazlasını bulabilirsiniz.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="keywords" content="elzemm tesisat blog, su tesisatı ipuçları, su kaçağı nasıl anlaşılır, tıkanıklık açma yöntemleri, tesisat haberleri">
+    <meta name="description" content="Elzemm Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri, sektördeki yenilikler ve daha fazlasını bulabilirsiniz.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Blog | Tesisat İpuçları ve Haberler | Ankara Tesisat">
-    <meta property="og:description" content="Ankara Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri bulabilirsiniz.">
+    <meta property="og:title" content="Blog | Tesisat İpuçları ve Haberler | Elzemm Tesisat">
+    <meta property="og:description" content="Elzemm Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri bulabilirsiniz.">
     <meta property="og:image" content="img/carousel-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com/blog.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Blog | Tesisat İpuçları ve Haberler | Ankara Tesisat">
-    <meta name="twitter:description" content="Ankara Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri bulabilirsiniz.">
+    <meta name="twitter:title" content="Blog | Tesisat İpuçları ve Haberler | Elzemm Tesisat">
+    <meta name="twitter:description" content="Elzemm Tesisat blogunda su tesisatı hakkında faydalı ipuçları, sık karşılaşılan sorunlar ve çözümleri bulabilirsiniz.">
     <meta name="twitter:image" content="img/carousel-1.jpg">
 
     <!-- Favicon -->
@@ -61,7 +61,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -78,7 +78,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -133,10 +133,10 @@
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="Ankara'da Yaygın Tesisat Sorunları">
+                            <img class="img-fluid" src="img/service-1.jpg" alt="Elzemm'de Yaygın Tesisat Sorunları">
                         </div>
-                        <h4 class="mb-3">Ankara'da En Yaygın Tesisat Sorunları</h4>
-                        <p>Ankara'nın iklimi ve altyapısı göz önüne alındığında sıkça karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.</p>
+                        <h4 class="mb-3">Elzemm'de En Yaygın Tesisat Sorunları</h4>
+                        <p>Elzemm'in iklimi ve altyapısı göz önüne alındığında sıkça karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.</p>
                         <a class="btn-slide mt-2" href="blog-yazi-1.html"><i class="fa fa-arrow-right"></i><span>Devamını Oku</span></a>
                     </div>
                 </div>
