--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <title>İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Ankara Tesisat</title>
+    <title>İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
-    <meta name="keywords" content="ankara tesisat iletişim, ankara su tesisatçısı telefon, acil tesisatçı ankara, ankara tesisat adres, 7/24 tesisatçı">
-    <meta name="description" content="Ankara Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız ve adresimiz.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="keywords" content="elzemm tesisat iletişim, ankara su tesisatçısı telefon, acil tesisatçı ankara, elzemm tesisat adres, 7/24 tesisatçı">
+    <meta name="description" content="Elzemm Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız ve adresimiz.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Ankara Tesisat">
-    <meta property="og:description" content="Ankara Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız.">
+    <meta property="og:title" content="İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Elzemm Tesisat">
+    <meta property="og:description" content="Elzemm Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız.">
     <meta property="og:image" content="img/about-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com/contact.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Ankara Tesisat">
-    <meta name="twitter:description" content="Ankara Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız.">
+    <meta name="twitter:title" content="İletişim | Ankara Su Tesisatçısı | 7/24 Acil Servis | Elzemm Tesisat">
+    <meta name="twitter:description" content="Elzemm Tesisat'a 7/24 ulaşın. Acil su tesisatı, su kaçağı tespiti ve tıkanıklık açma ihtiyaçlarınız için telefon numaralarımız.">
     <meta name="twitter:image" content="img/about-1.jpg">
 
     <!-- Favicon -->
@@ -64,7 +64,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="./index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -82,7 +82,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -235,7 +235,6 @@
                 d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
         </svg>
     </a>
-
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
