--- a/service.html
+++ b/service.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hizmetlerimiz | Ankara Su Tesisatçısı | Ankara Tesisat</title>
+    <title>Hizmetlerimiz | Ankara Su Tesisatçısı | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara su tesisatçısı hizmetleri, su kaçağı tespiti, tıkanıklık açma, kalorifer tesisatı, klozet tamiri, musluk tamiri, garantili tesisatçı ankara, acil tesisatçı">
-    <meta name="description" content="Ankara Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, robotla tıkanıklık açma, kalorifer tesisatı, klozet tamiri ve tüm sıhhi tesisat işlerinizde garantili çözümler.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, robotla tıkanıklık açma, kalorifer tesisatı, klozet tamiri ve tüm sıhhi tesisat işlerinizde garantili çözümler.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Hizmetlerimiz | Ankara Su Tesisatçısı | Ankara Tesisat">
-    <meta property="og:description" content="Ankara Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, tıkanıklık açma, kalorifer tesisatı ve dahası.">
+    <meta property="og:title" content="Hizmetlerimiz | Ankara Su Tesisatçısı | Elzemm Tesisat">
+    <meta property="og:description" content="Elzemm Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, tıkanıklık açma, kalorifer tesisatı ve dahası.">
     <meta property="og:image" content="img/service-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com/service.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Hizmetlerimiz | Ankara Su Tesisatçısı | Ankara Tesisat">
-    <meta name="twitter:description" content="Ankara Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, tıkanıklık açma, kalorifer tesisatı ve dahası.">
+    <meta name="twitter:title" content="Hizmetlerimiz | Ankara Su Tesisatçısı | Elzemm Tesisat">
+    <meta name="twitter:description" content="Elzemm Tesisat'ın profesyonel su tesisatı hizmetlerini keşfedin. Su kaçağı tespiti, tıkanıklık açma, kalorifer tesisatı ve dahası.">
     <meta name="twitter:image" content="img/service-1.jpg">
 
     <!-- Favicon -->
@@ -61,7 +61,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -78,7 +78,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
