--- a/ankara-hidrofor-tesisat-ve-montaji.html
+++ b/ankara-hidrofor-tesisat-ve-montaji.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ankara Hidrofor Tesisat ve Montajı | Ankara Tesisat</title>
+    <title>Ankara Hidrofor Tesisat ve Montajı | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara hidrofor tesisatı, hidrofor montajı ankara, ankara hidrofor tamiri, su basıncı sorunları ankara, ankara su tesisatçısı">
-    <meta name="description" content="Ankara'da profesyonel hidrofor tesisatı, montajı, tamiri ve bakımı. Ankara Tesisat olarak su basıncı sorunlarınıza kalıcı çözümler sunuyoruz.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm'de profesyonel hidrofor tesisatı, montajı, tamiri ve bakımı. Elzemm Tesisat olarak su basıncı sorunlarınıza kalıcı çözümler sunuyoruz.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -48,7 +48,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -65,7 +65,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -119,9 +119,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Ankara Tesisat</h6>
+                    <h6 class="text-secondary text-uppercase">Elzemm Tesisat</h6>
                     <h1 class="mb-4">Ankara Hidrofor Tesisatı, Montajı ve Tamiri</h1>
-                    <p class="mb-4">Ankara Tesisat olarak, <strong>hidrofor tesisatı, montajı ve tamiri</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Binalarda ve dairelerde yaşanan düşük su basıncı sorunlarına kalıcı ve etkili çözümler sunuyoruz.</p>
+                    <p class="mb-4">Elzemm Tesisat olarak, <strong>hidrofor tesisatı, montajı ve tamiri</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Binalarda ve dairelerde yaşanan düşük su basıncı sorunlarına kalıcı ve etkili çözümler sunuyoruz.</p>
                     <p class="mb-4">İhtiyacınıza en uygun hidrofor sisteminin seçilmesi, profesyonelce montajının yapılması ve mevcut sistemlerinizin bakım ve onarımı için bize güvenebilirsiniz. Doğru seçilmiş ve monte edilmiş bir hidrofor, su konforunuzu önemli ölçüde artırır.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Ücretsiz Keşif ve Projelendirme</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Garantili İşçilik ve Malzeme</p>
@@ -132,7 +132,7 @@
                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-3.jpg"
                             style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Hidrofor Montajı hizmeti">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara Tesisat garantili hizmet">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm Tesisat garantili hizmet">
                     </div>
                 </div>
             </div>
