--- a/ankara-musluk-tamiri.html
+++ b/ankara-musluk-tamiri.html
@@ -2,12 +2,12 @@
 <html lang="tr">
 <head>
     <meta charset="utf-8">
-    <title>Ankara Musluk Tamiri | Damlatan Musluk Tamiri | Ankara Tesisat</title>
+    <title>Ankara Musluk Tamiri | Damlatan Musluk Tamiri | Elzemm Tesisat</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="ankara musluk tamiri, musluk tamiri ankara, damlatan musluk tamiri, musluk contası değişimi, ankara su tesisatçısı">
-    <meta name="description" content="Ankara'da damlatan, sızdıran her türlü musluk ve bataryanın tamiri. Ankara Tesisat, musluk contası değişimi ve onarımı için hızlı servis sunar.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="description" content="Elzemm'de damlatan, sızdıran her türlü musluk ve bataryanın tamiri. Elzemm Tesisat, musluk contası değişimi ve onarımı için hızlı servis sunar.">
+    <meta name="author" content="Elzemm Tesisat">
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -44,7 +44,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -92,9 +92,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Ankara Tesisat</h6>
+                    <h6 class="text-secondary text-uppercase">Elzemm Tesisat</h6>
                     <h1 class="mb-4">Ankara Musluk Tamiri ve Conta Değişimi</h1>
-                    <p class="mb-4">Ankara Tesisat olarak, <strong>musluk tamiri</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Sürekli damlatan bir musluk, hem su israfına neden olur hem de faturanızın yükselmesine yol açar. Bu küçük ama can sıkıcı sorunu hızla çözüyoruz.</p>
+                    <p class="mb-4">Elzemm Tesisat olarak, <strong>musluk tamiri</strong> konusunda uzman ekibimizle Ankara genelinde hizmet vermekteyiz. Sürekli damlatan bir musluk, hem su israfına neden olur hem de faturanızın yükselmesine yol açar. Bu küçük ama can sıkıcı sorunu hızla çözüyoruz.</p>
                     <p class="mb-4">Musluk contası değişimi, salmastra değişimi, batarya kartuşu onarımı gibi işlemleri garantili olarak yapıyoruz. Çoğu zaman musluğu komple değiştirmeye gerek kalmadan, ekonomik bir tamirle sorunu ortadan kaldırıyoruz.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Damlayan Muslukların Tamiri</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Conta ve Salmastra Değişimi</p>
@@ -105,7 +105,7 @@
                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-3.jpg"
                             style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Musluk Tamiri hizmeti">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara Tesisat garantili hizmet">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm Tesisat garantili hizmet">
                     </div>
                 </div>
             </div>
