--- a/blog-yazi-1.html
+++ b/blog-yazi-1.html
@@ -3,24 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ankara'da En Yaygın Tesisat Sorunları | Ankara Tesisat Blog</title>
+    <title>Elzemm'de En Yaygın Tesisat Sorunları | Elzemm Tesisat Blog</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="robots" content="index,follow">
-    <meta name="keywords" content="ankara tesisat sorunları, su kaçağı ankara, tıkanıklık ankara, donan su boruları, düşük su basıncı">
-    <meta name="description" content="Ankara'da yaşayanlar için en sık karşılaşılan tesisat sorunlarını ve bu sorunlara karşı alabileceğiniz önlemleri Ankara Tesisat olarak sizler için derledik.">
-    <meta name="author" content="Ankara Tesisat">
+    <meta name="keywords" content="elzemm tesisat sorunları, su kaçağı ankara, tıkanıklık ankara, donan su boruları, düşük su basıncı">
+    <meta name="description" content="Elzemm'de yaşayanlar için en sık karşılaşılan tesisat sorunlarını ve bu sorunlara karşı alabileceğiniz önlemleri Elzemm Tesisat olarak sizler için derledik.">
+    <meta name="author" content="Elzemm Tesisat">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Ankara'da En Yaygın Tesisat Sorunları | Ankara Tesisat Blog">
-    <meta property="og:description" content="Ankara'da sık karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.">
+    <meta property="og:title" content="Elzemm'de En Yaygın Tesisat Sorunları | Elzemm Tesisat Blog">
+    <meta property="og:description" content="Elzemm'de sık karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.">
     <meta property="og:image" content="img/service-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com/blog-yazi-1.html">
     <meta property="og:type" content="article">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Ankara'da En Yaygın Tesisat Sorunları | Ankara Tesisat Blog">
-    <meta name="twitter:description" content="Ankara'da sık karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.">
+    <meta name="twitter:title" content="Elzemm'de En Yaygın Tesisat Sorunları | Elzemm Tesisat Blog">
+    <meta name="twitter:description" content="Elzemm'de sık karşılaşılan tesisat problemlerini ve pratik çözüm önerilerini sizler için derledik.">
     <meta name="twitter:image" content="img/service-1.jpg">
 
     <!-- Favicon -->
@@ -61,7 +61,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 50px;"></h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -78,7 +78,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0"><img src="img/logo.png" alt="Elzemm Tesisat Logo" style="height: 40px;"></h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -115,7 +115,7 @@
                 <ol class="breadcrumb text-uppercase">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Anasayfa</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="blog.html">Blog</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">Ankara'da En Yaygın Tesisat Sorunları</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Elzemm'de En Yaygın Tesisat Sorunları</li>
                 </ol>
             </nav>
         </div>
@@ -128,11 +128,11 @@
             <div class="row g-5">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">Tesisat Rehberi</h6>
-                    <h1 class="mb-4">Ankara'da En Yaygın Tesisat Sorunları ve Çözümleri</h1>
-                    <p class="mb-4">Ankara'nın sert kışları ve kendine özgü altyapısı, bazı tesisat sorunlarının daha sık yaşanmasına neden olabilir. Ankara Tesisat olarak, yılların tecrübesiyle en sık karşılaştığımız problemleri ve bunlara karşı alabileceğiniz önlemleri sizler için bir araya getirdik.</p>
+                    <h1 class="mb-4">Elzemm'de En Yaygın Tesisat Sorunları ve Çözümleri</h1>
+                    <p class="mb-4">Elzemm'in sert kışları ve kendine özgü altyapısı, bazı tesisat sorunlarının daha sık yaşanmasına neden olabilir. Elzemm Tesisat olarak, yılların tecrübesiyle en sık karşılaştığımız problemleri ve bunlara karşı alabileceğiniz önlemleri sizler için bir araya getirdik.</p>
                     
                     <h3 class="mb-3 mt-5">1. Donan Su Boruları ve Saatleri</h3>
-                    <p><strong>Sorun:</strong> Ankara'da kış aylarında sıcaklığın eksi derecelere düşmesiyle birlikte, özellikle müstakil evlerde ve bodrum katlarında korumasız olan su boruları ve sayaçları donabilir. Bu durum, boruların çatlamasına ve ciddi su baskınlarına yol açabilir.</p>
+                    <p><strong>Sorun:</strong> Elzemm'de kış aylarında sıcaklığın eksi derecelere düşmesiyle birlikte, özellikle müstakil evlerde ve bodrum katlarında korumasız olan su boruları ve sayaçları donabilir. Bu durum, boruların çatlamasına ve ciddi su baskınlarına yol açabilir.</p>
                     <p><strong>Çözüm ve Önlemler:</strong></p>
                     <ul>
                         <li>Açıkta kalan boruları ve su saatinizi mutlaka boru izolasyon malzemeleriyle kaplayın.</li>
@@ -157,14 +157,14 @@
                         <li>Tüm musluklar kapalıyken su saatinizin dönüp dönmediğini kontrol edin. Eğer dönüyorsa, bir kaçağınız var demektir.</li>
                         <li>Bu tür durumlarda, evi kırıp dökmeden önce termal kamera ve akustik dinleme cihazları kullanan bir <a href="ankara-su-kacagi-tespiti.html">su kaçağı tespiti</a> uzmanından yardım alın. Bu cihazlar, kaçağın yerini noktasal olarak bulur ve gereksiz tadilat masrafını önler.</li>
                     </ul>
-                    <p class="mt-4">Bu sorunlardan herhangi biriyle karşılaşırsanız, paniğe kapılmadan <strong>Ankara Tesisat</strong>'ı arayabilirsiniz. 7/24 hizmet veren uzman ekibimizle sorunlarınıza en kısa sürede profesyonel çözümler sunuyoruz.</p>
+                    <p class="mt-4">Bu sorunlardan herhangi biriyle karşılaşırsanız, paniğe kapılmadan <strong>Elzemm Tesisat</strong>'ı arayabilirsiniz. 7/24 hizmet veren uzman ekibimizle sorunlarınıza en kısa sürede profesyonel çözümler sunuyoruz.</p>
                 </div>
                 <div class="col-lg-4 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about-1.jpg"
-                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Tesisat uzman ekip">
+                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Elzemm Tesisat uzman ekip">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara'da garantili tesisat hizmeti">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm'de garantili tesisat hizmeti">
                     </div>
                 </div>
             </div>
