--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ankara Su Tesisatçısı & Su Kaçağı Tespiti | Ankara Tesisat | 7/24 Hizmet</title>
+    <title>Ankara Su Tesisatçısı & Su Kaçağı Tespiti | Elzemm Tesisat | 7/24 Hizmet</title>
     <meta name="robots" content="index,follow">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="Ankara su tesisatçısı, su kaçağı tespiti Ankara, tıkalı gider açma Ankara, petek temizleme, kırmadan su kaçağı bulma, Çankaya su tesisatçısı, acil tesisatçı Ankara, kameralı su kaçak tespiti, pimaş açma, sıhhi tesisat">
-    <meta name="description" content="Ankara'da 7/24 profesyonel su tesisatçısı hizmeti. Ankara Tesisat olarak uzman tecrübe ile kırmadan, dökmeden su kaçağı tespiti, tıkalı kanal açma ve tüm sıhhi tesisat işlerinizi garantili yapıyoruz. Hemen arayın!">
+    <meta name="description" content="Elzemm'de 7/24 profesyonel su tesisatçısı hizmeti. Elzemm Tesisat olarak uzman tecrübe ile kırmadan, dökmeden su kaçağı tespiti, tıkalı kanal açma ve tüm sıhhi tesisat işlerinizi garantili yapıyoruz. Hemen arayın!">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Plumber",
-      "name": "Ankara Tesisat",
-      "description": "Ankara'da 7/24 profesyonel su tesisatçısı hizmeti. Kırmadan su kaçağı tespiti, tıkalı kanal açma.",
+      "name": "Elzemm Tesisat",
+      "description": "Elzemm'de 7/24 profesyonel su tesisatçısı hizmeti. Kırmadan su kaçağı tespiti, tıkalı kanal açma.",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Ankara",
@@ -30,16 +30,16 @@
     </script>
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Ankara Su Tesisatçısı | 7/24 Acil Servis | Ankara Tesisat">
-    <meta property="og:description" content="Ankara'da kırmadan su kaçağı tespiti, tıkalı gider açma ve tüm tesisat işleriniz için profesyonel, garantili hizmet. 7/24 acil servis.">
+    <meta property="og:title" content="Ankara Su Tesisatçısı | 7/24 Acil Servis | Elzemm Tesisat">
+    <meta property="og:description" content="Elzemm'de kırmadan su kaçağı tespiti, tıkalı gider açma ve tüm tesisat işleriniz için profesyonel, garantili hizmet. 7/24 acil servis.">
     <meta property="og:image" content="img/about-1.jpg">
     <meta property="og:url" content="https://ankaratesisat.com">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Ankara Su Tesisatçısı | 7/24 Acil Servis | Ankara Tesisat">
-    <meta name="twitter:description" content="Ankara'da kırmadan su kaçağı tespiti, tıkalı gider açma ve tüm tesisat işleriniz için profesyonel, garantili hizmet. 7/24 acil servis.">
+    <meta name="twitter:title" content="Ankara Su Tesisatçısı | 7/24 Acil Servis | Elzemm Tesisat">
+    <meta name="twitter:description" content="Elzemm'de kırmadan su kaçağı tespiti, tıkalı gider açma ve tüm tesisat işleriniz için profesyonel, garantili hizmet. 7/24 acil servis.">
     <meta name="twitter:image" content="img/about-1.jpg">
 
     <!-- Favicon -->
@@ -66,6 +66,41 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
+    <style>
+        /* Sticky Buttons for Homepage Only */
+        .sticky-buttons-homepage {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1030;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .sticky-buttons-homepage a {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #25D366; /* WhatsApp Green */
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .sticky-buttons-homepage a.phone-button {
+            background-color: #007bff; /* Blue for phone */
+        }
+
+        .sticky-buttons-homepage a:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+        }
+    </style>
 </head>
 
 <body>
@@ -84,7 +119,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="./index.html" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                    <h1 class="text-primary m-0">Elzemm Tesisat</h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
@@ -102,7 +137,7 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Ankara Tesisat</h1>
+                <h1 class="text-primary m-0">Elzemm Tesisat</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -152,9 +187,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Ankara'nın Tesisat Uzmanı</h5>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Elzemm'in Tesisat Uzmanı</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Kırmadan Su Kaçağı Tespiti ve Tıkalı Gider Açma</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Ankara'nın her yerine 7/24 kesintisiz, garantili ve profesyonel tesisat hizmeti sunuyoruz.</p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Elzemm'in her yerine 7/24 kesintisiz, garantili ve profesyonel tesisat hizmeti sunuyoruz.</p>
                                 <a href="tel:05374852804"
                                     class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Hemen Arayın!</a>
                                 <a href="https://wa.me/+905374852804"
@@ -193,7 +228,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="text-secondary text-uppercase">Hizmetlerimiz</h6>
-                <h2 class="mb-5">Ankara'da Sunduğumuz Profesyonel Tesisat Çözümleri</h2>
+                <h2 class="mb-5">Elzemm'de Sunduğumuz Profesyonel Tesisat Çözümleri</h2>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.1s">
@@ -238,11 +273,11 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">Hakkımızda</h6>
-                    <h2 class="mb-4">Uzman Tecrübeyle Ankara'nın Güvenilir Su Tesisatçısı</h2>
-                    <p class="mb-4">Ankara Tesisat olarak, uzun yıllardır Ankara ve çevresinde su tesisatı sektöründe hizmet vermekteyiz. Müşteri memnuniyetini her zaman ön planda tutarak, en modern teknolojik ekipmanlar ve uzman kadromuzla sorunlarınıza kalıcı ve garantili çözümler üretiyoruz. Su kaçağı tespiti, tıkalı gider açma, kalorifer tesisatı ve komple tesisat yenileme gibi birçok alanda profesyonel hizmet sunuyoruz.</p>
+                    <h2 class="mb-4">Uzman Tecrübeyle Elzemm'in Güvenilir Su Tesisatçısı</h2>
+                    <p class="mb-4">Elzemm Tesisat olarak, uzun yıllardır Ankara ve çevresinde su tesisatı sektöründe hizmet vermekteyiz. Müşteri memnuniyetini her zaman ön planda tutarak, en modern teknolojik ekipmanlar ve uzman kadromuzla sorunlarınıza kalıcı ve garantili çözümler üretiyoruz. Su kaçağı tespiti, tıkalı gider açma, kalorifer tesisatı ve komple tesisat yenileme gibi birçok alanda profesyonel hizmet sunuyoruz.</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Tüm İşlemlerimize Servis Garantisi</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Bütçe Dostu, Uygun Fiyat Politikası</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>7/24 Ankara'nın Her Yerine Acil Servis</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>7/24 Elzemm'in Her Yerine Acil Servis</p>
                     <a href="tel:05374852804">
                         <div class="bg-primary d-flex align-items-center p-4 mt-5">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white"
@@ -259,9 +294,9 @@
                 <div class="col-lg-6 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about-1.jpg"
-                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Ankara Tesisat uzman ekip">
+                            style="object-fit: cover; padding: 0 0 50px 100px;" alt="Elzemm Tesisat uzman ekip">
                         <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50"
-                            src="img/about-2.jpg" style="object-fit: cover;" alt="Ankara'da garantili tesisat hizmeti">
+                            src="img/about-2.jpg" style="object-fit: cover;" alt="Elzemm'de garantili tesisat hizmeti">
                     </div>
                 </div>
             </div>
@@ -492,6 +527,17 @@
                 d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
         </svg>
     </a>
+
+    <!-- Sticky Buttons Homepage Start -->
+    <div class="sticky-buttons-homepage">
+        <a href="https://wa.me/905374852804?text=Merhaba%2C+web+sitenizden+ulaşıyorum." class="whatsapp-button" target="_blank" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="tel:+905374852804" class="phone-button" target="_blank" aria-label="Telefon">
+            <i class="fa fa-phone"></i>
+        </a>
+    </div>
+    <!-- Sticky Buttons Homepage End -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
